fix(vsc): bump xml2js version

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -1395,6 +1395,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vscode/codicons": "0.0.21",
+    "@vscode/vsce": "^2.19.0",
     "adm-zip": "^0.5.4",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
@@ -1432,6 +1433,7 @@
     "sinon": "^9.2.2",
     "source-map-support": "^0.5.19",
     "style-loader": "^2.0.0",
+    "svgtofont": "^3.23.1",
     "terser-webpack-plugin": "^4.2.3",
     "tmp": "^0.2.1",
     "ts-loader": "^8.0.3",
@@ -1443,8 +1445,6 @@
     "url-loader": "^4.1.1",
     "uuid": "^8.3.2",
     "verdaccio": "^5.18.0",
-    "vsce": "^2.7.0",
-    "webfont": "^11.2.26",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
     "winston": "^3.3.3"
