--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -124,18 +124,23 @@ jobs:
           ref: ${{ github.event.pull_request.head.ref }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
 
-      - name: Install Yaml lint
+      - name: Install Yaml lint and mustache
         run: |
           pip install yamllint
+          npm install mustache -g
+          echo "{}" > test.json
       
       - name: check yaml lint
         run: |
           TRAGET=origin/${{ github.event.pull_request.base.ref }}
-          VAR=$(git diff --diff-filter=MARC $TRAGET...HEAD --name-only -- templates/scenarios | grep -E '.yml.tpl$|.yml$' | xargs)
-          echo $VAR
-          if [ ! -z "$VAR" ]
+          YMLTPL=$(git diff --diff-filter=MARC $TRAGET...HEAD --name-only -- templates/scenarios | grep -E '.yml.tpl$'|xargs)
+          echo $YMLTPL
+          if [ ! -z "$YMLTPL" ]
           then
-              yamllint $VAR
+              for obj in "$YMLTPL"
+              do
+                mustache test.json $obj | yamllint -
+              done
           fi
 
   check-sensitive-content:
