--- a/packages/fx-core/templates/core/v3Migration/csharp.app.local.yml
+++ b/packages/fx-core/templates/core/v3Migration/csharp.app.local.yml
@@ -76,6 +76,12 @@ provision:
             OAuthAuthority: $\{{AAD_APP_OAUTH_AUTHORITY}}
   {{/if}} 
 {{/if}}
+{{#if activePlugins.fx-resource-bot}}
+  - uses: script # Set env for local launch
+    name: Set {{placeholderMappings.botDomain}} for local launch
+    with:
+      run: echo "::set-teamsfx-env {{placeholderMappings.botDomain}}=$\{{BOT_DOMAIN}}"
+{{/if}}
 {{#if activePlugins.fx-resource-aad-app-for-teams}}
   - uses: aadApp/update # Apply the AAD manifest to an existing AAD app. Will use the object id in manifest file to determine which AAD app to update.
     with:
