--- a/templates/scenarios/ts/non-sso-tab/.vscode/tasks.json
+++ b/templates/scenarios/ts/non-sso-tab/.vscode/tasks.json
@@ -27,7 +27,8 @@
                     "portOccupancy" // Validate available ports to ensure those debug ones are not occupied.
                 ],
                 "portOccupancy": [
-                    53000 // tab service port
+                    53000, // tab service port,
+                    9239 // app inspector port for Node.js debugger
                 ]
             }
         },
@@ -53,12 +54,6 @@
         },
         {
             "label": "Start application",
-            "dependsOn": [
-                "Start frontend"
-            ]
-        },
-        {
-            "label": "Start frontend",
             "type": "shell",
             "command": "npm run dev:teamsfx",
             "isBackground": true,
@@ -75,7 +70,7 @@
                 "background": {
                     "activeOnStart": true,
                     "beginsPattern": ".*",
-                    "endsPattern": "Compiled|Failed|compiled|failed"
+                    "endsPattern": "Compiled|Failed|compiled|failed|listening"
                 }
             }
         }
