--- a/templates/scenarios/csharp/sso-tab/appsettings.Development.json
+++ b/templates/scenarios/csharp/sso-tab/appsettings.Development.json
@@ -11,6 +11,7 @@
     "Authentication": {
       "ClientId": "$clientId$",
       "ClientSecret": "$client-secret$",
+      "InitiateLoginEndpoint": "$TAB_ENDPOINT$/auth-start.html",
       "OAuthAuthority": "$oauthAuthority$"
     }
   }
