--- a/templates/scenarios/ts/dashboard-tab/.vscode/tasks.json
+++ b/templates/scenarios/ts/dashboard-tab/.vscode/tasks.json
@@ -27,8 +27,7 @@
                     "portOccupancy" // Validate available ports to ensure those debug ones are not occupied.
                 ],
                 "portOccupancy": [
-                    53000, // tab service port
-                    9239 // app inspector port for Node.js debugger
+                    53000 // tab service port
                 ]
             }
         },
