--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/semver": "^7.3.8",
     "axios": "^0.21.3",
     "codecov": "^3.8.3",
+    "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^10.0.0",
     "husky": "^6.0.0",
     "lerna": "^4.0.0",
@@ -31,5 +32,9 @@
   "bin": {
     "teamsfx": "./packages/cli/cli.js"
   },
-  "dependencies": {}
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
