--- a/templates/scenarios/js/dashboard-tab/.vscode/tasks.json
+++ b/templates/scenarios/js/dashboard-tab/.vscode/tasks.json
@@ -75,7 +75,7 @@
                 "background": {
                     "activeOnStart": true,
                     "beginsPattern": ".*",
-                    "endsPattern": "Compiled|Failed|compiled|failed|listening"
+                    "endsPattern": "Compiled|Failed|compiled|failed"
                 }
             }
         }
