--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/happyPath/testCaseFiles/.env.config.dev
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/happyPath/testCaseFiles/.env.config.dev
@@ -1,3 +1,4 @@
+# This file includes environment variables that will be committed to git by default.
 TEAMSFX_ENV=dev
 CONFIG__MANIFEST__APPNAME__SHORT=testApp
 CONFIG__MANIFEST__APPNAME__FULL=Full name for testApp
