--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/happyPath/testCaseFiles/.env.state.dev
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/happyPath/testCaseFiles/.env.state.dev
@@ -1,3 +1,4 @@
+# This file includes environment variables that will be committed to git by default.
 STATE__SOLUTION__PROVISIONSUCCEEDED=true
 STATE__SOLUTION__TEAMSAPPTENANTID=teamsAppTenantId
 AZURE_SUBSCRIPTION_ID=subscriptionId
