--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/happyPath/testCaseFiles/.env.config.local
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/happyPath/testCaseFiles/.env.config.local
@@ -1,3 +1,4 @@
+# This file includes environment variables that can be committed to git. It's gitignored by default because it represents your local development environment.
 TEAMSFX_ENV=local
 CONFIG__MANIFEST__APPNAME__SHORT=testApp-local
 CONFIG__MANIFEST__APPNAME__FULL=Full name for testApp-local
