--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/happyPath/testCaseFiles/.env.state.local
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/happyPath/testCaseFiles/.env.state.local
@@ -1,3 +1,4 @@
+# This file includes environment variables that can be committed to git. It's gitignored by default because it represents your local development environment.
 STATE__SOLUTION__PROVISIONSUCCEEDED=true
 STATE__SOLUTION__TEAMSAPPTENANTID=teamsAppTenantId
 TEAMS_APP_TENANT_ID=tenantId
