--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/happyPath/testCaseFiles/.env.userdata.local
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/happyPath/testCaseFiles/.env.userdata.local
@@ -1,2 +1,5 @@
+# This file includes environment variables that will not be committed to git by default. You can set these environment variables in your CI/CD system for your project.
+
+# Secrets. Keys prefixed with `SECRET_` will be masked in Teams Toolkit logs.
 SECRET_AAD_APP_CLIENT_SECRET=1234_abcd_local
 SECRET_BOT_PASSWORD=1234_abcd_local=sadf+-fdsfa
