fix: set env better format

--- a/packages/fx-core/templates/core/v3Migration/js.ts.app.local.yml
+++ b/packages/fx-core/templates/core/v3Migration/js.ts.app.local.yml
@@ -55,17 +55,11 @@ provision:
   {{#configureApp}}
   {{#tab}}
   - uses: script # Set env for local launch
-    name: Set {{../../../placeholderMappings.tabDomain}} for local launch
     with:
-      run: echo "::set-teamsfx-env {{../../../placeholderMappings.tabDomain}}={{domain}}"
-  - uses: script # Set env for local launch
-    name: Set {{../../../placeholderMappings.tabEndpoint}} for local launch
-    with:
-      run: echo "::set-teamsfx-env {{../../../placeholderMappings.tabEndpoint}}={{endpoint}}"
-  - uses: script # Set env for local launch
-    name: Set {{../../../placeholderMappings.tabIndexPath}} for local launch
-    with:
-      run: echo "::set-teamsfx-env {{../../../placeholderMappings.tabIndexPath}}=/index.html#"
+      run:
+        echo "::set-teamsfx-env {{../../../placeholderMappings.tabDomain}}={{domain}}";
+        echo "::set-teamsfx-env {{../../../placeholderMappings.tabEndpoint}}={{endpoint}}";
+        echo "::set-teamsfx-env {{../../../placeholderMappings.tabIndexPath}}=/index.html#";
 
   {{/tab}}
   {{#if aad}}
