--- a/packages/fx-core/templates/core/v3Migration/csharp.app.local.yml
+++ b/packages/fx-core/templates/core/v3Migration/csharp.app.local.yml
@@ -53,17 +53,11 @@ provision:
 {{/if}}
 {{#if activePlugins.fx-resource-frontend-hosting}}
   - uses: script # Set env for local launch
-    name: Set {{placeholderMappings.tabDomain}} for local launch
     with:
-      run: echo "::set-teamsfx-env {{placeholderMappings.tabDomain}}=localhost:44302"
-  - uses: script # Set env for local launch
-    name: Set {{placeholderMappings.tabEndpoint}} for local launch
-    with:
-      run: echo "::set-teamsfx-env {{placeholderMappings.tabEndpoint}}=https://localhost:44302"
-  - uses: script # Set env for local launch
-    name: Set {{placeholderMappings.tabIndexPath}} for local launch
-    with:
-      run: echo "::set-teamsfx-env {{placeholderMappings.tabIndexPath}}=#"
+      run:
+        echo "::set-teamsfx-env {{placeholderMappings.tabDomain}}=localhost:44302";
+        echo "::set-teamsfx-env {{placeholderMappings.tabEndpoint}}=https://localhost:44302";
+        echo "::set-teamsfx-env {{placeholderMappings.tabIndexPath}}=#";
   {{#if activePlugins.fx-resource-aad-app-for-teams}}
   - uses: file/createOrUpdateJsonFile
     with:
