--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -167,19 +167,19 @@
         {
           "id": "teamsfx-help-and-feedback",
           "name": "Help and feedback",
-          "when": "fx-extension.isTeamsFx && !fx-extension.canUpgradeV3 && !fx-extension.isV3Enabled",
+          "when": "fx-extension.isTeamsFx && !fx-extension.canUpgradeV3",
           "visibility": "visible"
         },
         {
           "id": "teamsfx-help",
           "name": "Help",
-          "when": "fx-extension.isTeamsFx && fx-extension.isV3Enabled",
+          "when": "false",
           "visibility": "collapsed"
         },
         {
           "id": "teamsfx-feedback",
           "name": "Feedback",
-          "when": "fx-extension.isTeamsFx && fx-extension.isV3Enabled",
+          "when": "false",
           "visibility": "visible"
         },
         {
