--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@microsoft/eslint-plugin-teamsfx": "^0.0.1",
     "@mochajs/json-file-reporter": "^1.3.0",
     "@types/adm-zip": "^0.4.34",
     "@types/chai": "^4.2.14",
@@ -66,7 +67,6 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-prettier": "^4.0.0",
-    "@microsoft/eslint-plugin-teamsfx": "^0.0.1",
     "html-webpack-plugin": "^5.3.1",
     "jsonschema": "^1.4.0",
     "lint-staged": "^10.5.4",
@@ -85,6 +85,7 @@
     "ts-loader": "^9.2.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.2",
+    "umd-compat-loader": "^2.1.2",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.2",
     "webpack": "^5.38.1",
