fix(localdebug): support versioning install in devTool/install driver

--- a/packages/fx-core/templates/core/v3Migration/js.ts.app.local.yml
+++ b/packages/fx-core/templates/core/v3Migration/js.ts.app.local.yml
@@ -116,7 +116,9 @@ deploy:
         trust: {{trust}}
       {{/devCert}}
       {{#func}}
-      func: true
+      func:
+        version: {{version}}
+        symlinkDir: {{symlinkDir}}
       {{/func}}
       {{#dotnet}}
       dotnet: true
