--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/debug/transparent-notification-node18/expected/app.local.yml
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/debug/transparent-notification-node18/expected/app.local.yml
@@ -45,7 +45,7 @@ deploy:
   - uses: devTool/install # Install development tool(s)
     with:
       func:
-        version: 4
+        version: ~4.0.4670
         symlinkDir: ./devTools/func
     writeToEnvironmentFile: # Write the information of installed development tool(s) into environment file for the specified environment variable(s).
       funcPath: FUNC_PATH
@@ -60,5 +60,5 @@ deploy:
   - uses: cli/runNpmCommand # Run npm command
     with:
       args: install --no-audit
-      workingDirectory: bot
+      workingDirectory: ./bot
 
