--- a/packages/fx-core/templates/core/v3Migration/js.ts.app.local.yml
+++ b/packages/fx-core/templates/core/v3Migration/js.ts.app.local.yml
@@ -109,7 +109,8 @@ provision:
 {{#config.deploy}}
 deploy:
   {{#tools}}
-  - uses: devTool/install # Install development tool(s)
+  # Install development tool(s)
+  - uses: devTool/install
     with:
       {{#devCert}}
       devCert:
@@ -123,7 +124,9 @@ deploy:
       {{#dotnet}}
       dotnet: true
       {{/dotnet}}
-    writeToEnvironmentFile: # Write the information of installed development tool(s) into environment file for the specified environment variable(s).
+    # Write the information of installed development tool(s) into environment
+    # file for the specified environment variable(s).
+    writeToEnvironmentFile:
       {{#devCert}}
       sslCertFile: SSL_CRT_FILE
       sslKeyFile: SSL_KEY_FILE
