--- a/packages/fx-core/templates/core/v3Migration/js.ts.app.local.yml
+++ b/packages/fx-core/templates/core/v3Migration/js.ts.app.local.yml
@@ -147,7 +147,8 @@ deploy:
 
   {{/dotnetCommand}}
   {{#tab}}
-  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables
+  # Generate runtime environment variables
+  - uses: file/createOrUpdateEnvironmentFile
     with:
       target: ./tabs/.env.teamsfx.local
       envs:
@@ -159,7 +160,8 @@ deploy:
 
   {{/tab}}
   {{#if bot}}
-  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables
+  # Generate runtime environment variables
+  - uses: file/createOrUpdateEnvironmentFile
     with:
       target: ./bot/.env.teamsfx.local
       envs:
@@ -168,7 +170,8 @@ deploy:
 
   {{/if}}
   {{#ssoTab}}
-  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables
+  # Generate runtime environment variables
+  - uses: file/createOrUpdateEnvironmentFile
     with:
       target: ./tabs/.env.teamsfx.local
       envs:
@@ -181,7 +184,8 @@ deploy:
 
   {{/ssoTab}}
   {{#if ssoBot}}
-  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables
+  # Generate runtime environment variables
+  - uses: file/createOrUpdateEnvironmentFile
     with:
       target: ./bot/.env.teamsfx.local
       envs:
@@ -201,7 +205,8 @@ deploy:
 
   {{/if}}
   {{#if ssoFunction}}
-  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables
+  # Generate runtime environment variables
+  - uses: file/createOrUpdateEnvironmentFile
     with:
       target: ./api/.env.teamsfx.local
       envs:
@@ -222,7 +227,8 @@ deploy:
 
   {{/npmCommands}}
   {{#frontendStart}}
-  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables
+  # Generate runtime environment variables
+  - uses: file/createOrUpdateEnvironmentFile
     with:
       target: ./tabs/.localConfigs
       envs:
@@ -243,7 +249,8 @@ deploy:
 
   {{/frontendStart}}
   {{#authStart}}
-  - uses: file/createOrUpdateJsonFile # Generate runtime environment variables
+  # Generate runtime appsettings to JSON file
+  - uses: file/createOrUpdateJsonFile
     with:
       target: {{appsettingsPath}}
       appsettings:
@@ -258,7 +265,8 @@ deploy:
 
   {{/authStart}}
   {{#botStart}}
-  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables
+  # Generate runtime environment variables
+  - uses: file/createOrUpdateEnvironmentFile
     with:
       target: ./bot/.localConfigs
       envs:
@@ -282,7 +290,8 @@ deploy:
 
   {{/botStart}}
   {{#if backendStart}}
-  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables
+  # Generate runtime environment variables
+  - uses: file/createOrUpdateEnvironmentFile
     with:
       target: ./api/.localConfigs
       envs:
