--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/debug/transparent-m365-me/expected/app.local.yml
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/debug/transparent-m365-me/expected/app.local.yml
@@ -55,7 +55,8 @@ provision:
       appId: M365_APP_ID
 
 deploy:
-  - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables
+  # Generate runtime environment variables
+  - uses: file/createOrUpdateEnvironmentFile
     with:
       target: ./bot/.env.teamsfx.local
       envs:
